--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android:build": "react-native run-android --mode release",
     "ios": "react-native run-ios",
     "lint": "eslint . --fix",
     "start": "react-native start",
@@ -17,7 +18,6 @@
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
-    "react-native-svg": "^15.1.0",
     "react-native-vision-camera": "^3.9.2"
   },
   "devDependencies": {
